<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.quiktrack.quiktrack.AddItemActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextItemName"
        android:inputType="text"
        android:hint="@string/string_edittext_itemName"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerTags"
        android:layout_below="@+id/editTextItemName" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCamera"
        android:layout_below="@+id/spinnerTags"
        android:text="@string/string_button_camera"/>
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height= "@dimen/imageview_height"
        android:id="@+id/imageViewItemPicture"
        android:layout_below="@+id/spinnerTags"
        android:visibility="invisible"
        android:contentDescription="@string/string_accessiblity_capturedImage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSaveItem"
        android:text="@string/string_button_saveItem"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true" />



</RelativeLayout>
