<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.quiktrack.quiktrack.CheckItemActivity">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerItems"/>

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerItems"
        android:id="@+id/toggleButtonCheckItem"
        android:textOn="@string/string_togglebutton_on"
        android:textOff="@string/string_togglebutton_off" />

    <ImageView
        android:layout_width="@dimen/abc_dropdownitem_icon_width"
        android:layout_height="@dimen/abc_dropdownitem_icon_width"
        android:layout_below="@+id/toggleButtonCheckItem"
        android:id="@+id/imageViewCheckStatus"
        android:layout_centerInParent="true"
        android:contentDescription="@string/string_accessibility_itemCheckStatus" />

</RelativeLayout>
